// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addTodo creates ADD_TODO action 1`] = `
Object {
  "payload": "Learn React",
  "type": "ADD_TODO",
}
`;

exports[`completeTodo creates COMPLETE_TODO action 1`] = `
Object {
  "payload": 1,
  "type": "COMPLETE_TODO",
}
`;

exports[`deleteTodo creates DELETE_TODO action 1`] = `
Object {
  "payload": 1,
  "type": "DELETE_TODO",
}
`;

exports[`editTodo creates EDIT_TODO action 1`] = `
Object {
  "payload": Object {
    "id": 1,
    "text": "Learn Redux",
  },
  "type": "EDIT_TODO",
}
`;
